[tool.poetry]
name = "gccpacman-github-io"
version = "0.1.0"
description = ""
authors = ["gccpacman <gccpacman@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gccpacman"}]

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.8.0"}
invoke = "1.3.0"
ghp-import = "^2.1.0"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
